Mingle #7544, Stabilize Cucumber Tests 1) Update Destination_Suggest for Las Vegas. It seems to have changed. 2) Modify the scroll logic, to account for when the needed object is under the "Sort & Filter" footer.
3) Modify the date validation to include the day of the week.